--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,11 @@
 
   <head>
     <meta charset="utf-8" />
-    <title>Landrick - Saas & Software Landing Page Template</title>
+    <title>ElektroPay - Saas & Commerce Engine</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Premium Bootstrap 4 Landing Page Template" />
-    <meta name="keywords" content="bootstrap 4, premium, marketing, multipurpose" />
-    <meta name="author" content="Shreethemes" />
+    <meta name="description" content="Elektropay monetizes everything" />
+    <meta name="keywords" content="Elektropay, global payments, monetization of services, commerce as a service" />
+    <meta name="author" content="Elektropay.com" />
     <meta name="Version" content="2.0" />
     <!-- favicon -->
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
