--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,15 @@
 
   <head>
     <meta charset="utf-8" />
-    <title>ElektroPay - Saas & Commerce Engine</title>
+    <title>Experience | Elektropay</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Elektropay monetizes everything" />
+    <meta name="description" content="Connect with more customers and increase your bottom line with Elektropay’s Open Commerce platform that connects all major payment processors, credit, gift and debit cards, Echecks, and most popular digital wallets in one single, seamless integration." />
     <meta name="keywords" content="Elektropay, global payments, monetization of services, commerce as a service" />
     <meta name="author" content="Elektropay.com" />
+    <meta property="og:description" content="Connect with more customers and increase your bottom line with Elektropay’s Open Commerce platform that connects all major payment processors, credit, gift and debit cards, Echecks, and most popular digital wallets in a single, seamless integration." />
+    <meta property="og:url" content="https://elektropay.com/" />
+    <meta property="og:site_name" content="Elektropay" />
+    <meta name="google-site-verification" content="uubLfpcORmDWkM8pI-yKODVVZD3VSpUYFSwkQJcOuZE" /> 
     <meta name="Version" content="2.0" />
     <!-- favicon -->
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
