--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 
   <head>
     <meta charset="utf-8" />
-    <title>Experience | Elektropay</title>
+    <title>Elektropay | Open Commerce Platform</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Connect with more customers and increase your bottom line with Elektropay’s Open Commerce platform that connects all major payment processors, credit, gift and debit cards, Echecks, and most popular digital wallets in one single, seamless integration." />
     <meta name="keywords" content="Elektropay, global payments, monetization of services, commerce as a service" />
@@ -15,7 +15,8 @@
     <meta name="Version" content="2.0" />
     <!-- favicon -->
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/simple-line-icons/2.4.1/css/simple-line-icons.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.min.css">
     <!-- for slider -->
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha256-pasqAKBDmFT4eHoN2ndd6lN370kFiGUFyTiUHWhU7k8=" crossorigin="anonymous"></script>
 </head>
